--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -116,4 +118,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'com.google.firebase:firebase-messaging' // 추가
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
