--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/messaging": "^21.6.1",
-    "@react-navigation/native": "^7.0.12",
-    "@react-navigation/stack": "^7.0.17",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.9",
-    "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.5",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.21.2",
-    "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-reanimated": "^3.16.5",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^4.3.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
